--- a/setup.cfg
+++ b/setup.cfg
@@ -1,16 +1,16 @@
 [metadata]
-name = dynlog
+name = lack
 version = attr: dynlog.__version__
-author = Xiaojie Qiu, Yan Zhang, Ke Ni
-author_email = xqiu.sc@gmail.com
+author = Ke Ni, Xiaojie Qiu, Yang Zhang
+author_email = dummtindex@gmail.com
 url = https://github.com/aristoteleo/logging
-description = dynamo style logging utils
+description = A logging toolkit that provides log info for packages from Aristotle ecosystem and beyond
 long_description = README.md
 long_description_content_type = text/markdown
 license = MIT
 license_file = COPYING
 # platform = any
-keywords = dynamo logging
+keywords = logging
 classifiers =
     Development Status :: Alpha
     Intended Audience :: Developers
