update version and add method to change main_logger name

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = lack
-version = attr: dynlog.__version__
+version = attr: lack.__version__
 author = Ke Ni, Xiaojie Qiu, Yang Zhang
 author_email = dummtindex@gmail.com
 url = https://github.com/aristoteleo/logging
